--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
-body{
-    background-color: #008080;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    transition: .3s ease;
+}
+
+:root{
+    --PrimaryColor: hsl(26, 93%, 50%);
+    --HoverColor: hsl(26, 90%, 42%);
+    --whiteColor: hsl(0, 0%, 100%);
+    --blackColor: hsl(0, 0%, 10%);
+    --textColor: hsl(26, 93%, 50%);
+    --whiteColorDeam:hsl(0, 0%, 90%);
+    --greyBg:hsl(0, 0%, 95%);
+    --greyText: rgb(190, 190, 190);
+    --inputColor: hsl(300, 10%, 97%);
 }
