--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     font-family: 'Poppins', sans-serif;
     transition: .3s ease;
 }
-
+/* Colors */
 :root{
     --PrimaryColor: hsl(26, 93%, 50%);
     --HoverColor: hsl(26, 90%, 42%);
@@ -18,4 +18,73 @@
     --greyBg:hsl(0, 0%, 95%);
     --greyText: rgb(190, 190, 190);
     --inputColor: hsl(300, 10%, 97%);
+}
+/* Default styling */
+a{
+    text-decoration: none;
+}
+
+li{
+    list-style: none;
+}
+.section {
+    padding: 4rem 0 2rem;
+}
+.container{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+
+}
+.icon{
+    font-size: 2rem;
+    cursor: pointer;
+
+}
+.flex{
+    display: flex;
+    align-items: center;
+}
+.grid {
+    display: grid;
+    align-items: center;
+}
+.btn{
+    padding: .4rem 1.5rem;
+    background: var(--PrimaryColor);
+    border: none;
+    outline: none;
+    border-radius: 3rem;
+    cursor: pointer;
+}
+.btn a{
+    color: var(--whiteColor);
+    font-weight: 500;
+}
+.btn:hover a{
+    color:var(--whiteColor)
+}
+.secIntro{
+    max-width: 70%;
+    text-align: center;
+    margin: 0 auto 2rem;
+}
+
+.secIntro .secTitle {
+    color: var(--blackColor);
+    line-height: 1.5rem;
+    padding-bottom: .5rem;
+}
+.secIntro p{
+    font-size: 13px;
+    color: var(--textColor);
+    font-weight: 500;
+
+}
+img, video{
+    width: 100%;
+    height: auto;
+}
+
+input{
+    font-size: 100%;
 }
